# upnext_flightmind

./: .gitignore  .gitmodules  CONTEXT.md  README.md  demo.sh
src/acas_node/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/acas_node/acas_node/: __init__.py  acas_fc.py  acas_logic.py  acas_node.py
src/acas_node/config/: acas.yaml
src/acas_node/include/acas_node/: nnet_loader.hpp
src/acas_node/launch/: acas_xu.launch.py
src/acas_node/nnets/: acas_xu_43.nnet
src/acas_node/src/: acas_node.cpp  nnet_loader.cpp
src/acas_node/test/: test_acas_neural.cpp  test_acas_phase8.py  test_nnet_loader.cpp  test_phase0_import.py
src/daidalus_node/: CMakeLists.txt  package.xml
src/daidalus_node/config/: daidalus.yaml
src/daidalus_node/include/daidalus_node/: synthetic_daa.hpp
src/daidalus_node/src/: daidalus_node.cpp  synthetic_daa.cpp
src/daidalus_node/test/: test_synthetic_daa.cpp
src/fdir/: package.xml  setup.cfg  setup.py
src/fdir/config/: fdir.yaml  fdir_severity.yaml
src/fdir/fdir/: battery_monitor.py  battery_monitor_node.py  c2_monitor.py  c2_monitor_node.py  fdir_core.py  fdir_node.py  severity_table.py  watchdog_node.py
src/fdir/test/: test_battery_monitor.py  test_c2_monitor.py  test_fdir_phase3.py  test_phase0_import.py  test_severity_table.py
src/flightmind_common/: package.xml  setup.cfg  setup.py
src/flightmind_common/flightmind_common/: __init__.py  event_logger.py
src/flightmind_common/test/: test_event_logger.py
src/flightmind_msgs/: CMakeLists.txt  README.md  package.xml
src/flightmind_msgs/msg/: ACASAdvisory.msg  DaidalusAlert.msg  DaidalusBands.msg  FSMState.msg  GeofenceStatus.msg  NavigationState.msg  TrafficIntruder.msg  TrafficReport.msg  TrajectorySetpoint.msg  VehicleModelState.msg
src/gpp/: package.xml  setup.cfg  setup.py
src/gpp/config/: gpp.yaml
src/gpp/docs/vnv/: XFAIL_INDEX_GPP.md
src/gpp/gpp/: dubins.py  fl_assignment.py  geometry.py  gpp_node.py  rrt_star.py  takeoff_manager.py
src/gpp/test/: conftest.py  test_fl_assignment.py  test_phase0_import.py  test_rrt_star.py  test_takeoff_manager.py
src/gpp/test/demo/: test_demo_t1_gpp_nfz.py
src/gpp/test/m1_fl_assignment/: test_fl_assignment_vnv.py
src/gpp/test/m2_geometry/: test_geometry_vnv.py
src/gpp/test/m3_dubins/: test_dubins_vnv.py
src/gpp/test/m4_rrt_star/: test_rrt_star_vnv.py
src/gpp/test/m5_takeoff_manager/: test_takeoff_manager_vnv.py
src/gpp/test/m6_gpp_node/: test_gpp_node_vnv.py
src/gpp/test/m7_integration/: test_gpp_integration_vnv.py
src/gpp/test/m8_safety_regression/: test_gpp_safety_regression.py
src/mission_fsm/: .coverage  package.xml  pytest_demo.ini  setup.cfg  setup.py
src/mission_fsm/config/: mission_fsm.yaml  mission_fsm_heli.yaml  mission_fsm_male.yaml  mission_fsm_vtol.yaml
src/mission_fsm/docs/vnv/: VV_MATRIX.md  XFAIL_INDEX.md  phase_0_report.md  phase_1_report.md  phase_2_report.md  phase_3_report.md  phase_4_report.md  phase_5_report.md
src/mission_fsm/launch/: flight_demo.launch.py
src/mission_fsm/mission_fsm/: fsm.py  mission_fsm_node.py  navigation_quality_relay_node.py
src/mission_fsm/test/: conftest.py  pytest.ini  test_demo_smoke.py  test_fsm_coverage.py  test_mission_fsm_transitions.py  test_phase0_import.py  test_phase0_vnv_infrastructure.py
src/mission_fsm/test/m10_e2e_faults/: test_e2e_faults.py
src/mission_fsm/test/m11_performance/: test_performance.py
src/mission_fsm/test/m13_safety_atoms/: test_m13_safety_atoms.py
src/mission_fsm/test/m1_fsm_transitions/: test_fsm_transitions.py
src/mission_fsm/test/m2_fsm_timeouts/: test_fsm_timeouts.py
src/mission_fsm/test/m3_fsm_integrity/: test_fsm_integrity.py
src/mission_fsm/test/m4_localization/: test_localization_interface.py
src/mission_fsm/test/m5_daidalus/: test_daidalus_alerts.py
src/mission_fsm/test/m6_fdir/: test_fdir.py
src/mission_fsm/test/m7_nav2/: test_nav2_interface.py
src/navigation_bridge/: package.xml  setup.py
src/navigation_bridge/navigation_bridge/: __init__.py  navigation_bridge_node.py
src/navigation_bridge/test/: test_navigation_bridge.py
src/perception_bridge/: CMakeLists.txt  package.xml  setup.py
src/perception_bridge/perception_bridge/: __init__.py  point_cloud_utils.py  slam_node.py
src/perception_bridge/test/: test_slam_node.py
src/polycarp_node/: package.xml  setup.cfg  setup.py
src/polycarp_node/polycarp_node/: polycarp_core.py  polycarp_node.py
src/polycarp_node/test/: test_phase0_import.py  test_polycarp_core.py
src/trajectory_gen/: package.xml  setup.py
src/trajectory_gen/test/: test_phase0_import.py  test_traj_phase7.py  test_trajectory_waypoints.py
src/trajectory_gen/trajectory_gen/: __init__.py  dubins3d.py  trajectory_gen_node.py  waypoint_follower.py
src/uas_stack_tests/: package.xml  setup.cfg  setup.py
src/uas_stack_tests/docs/: VV_MATRIX.md
src/uas_stack_tests/launch/: full_stack.launch.py
src/uas_stack_tests/scripts/: daa_dashboard.py  scenario_crossing.py  scenario_geofence.py  scenario_head_on.py  scenario_overtake.py
src/uas_stack_tests/test/: test_phase0_workspace.py  test_phase9_integration.py
src/uas_stack_tests/uas_stack_tests/: __init__.py  dashboard.py  fake_fmu_shim.py  scenario_lib.py  stack_integration_feeds.py
src/upnext_icarous_daa/: CMakeLists.txt  package.xml
src/upnext_icarous_daa/config/: daa_smoke_demo.rviz  upnext_daa_default.txt
src/upnext_icarous_daa/launch/: daa_smoke_demo.launch.py  daa_smoke_flying.launch.py  daa_stack.launch.py  daa_stack_offboard.launch.py  daa_traffic_monitor.launch.py
src/upnext_icarous_daa/meshes/: README.txt  logo_plane.stl
src/upnext_icarous_daa/scripts/: daa_demo_viz  fake_px4_for_daa_test  px4_sitl_set_offboard  px4_sitl_takeoff
src/upnext_icarous_daa/src/: daa_traffic_monitor_node.cpp
src/upnext_icarous_daa/test/: test_daa_fake_stack.sh
src/vehicle_model/: package.xml  setup.py
src/vehicle_model/config/: vehicle_model.yaml
src/vehicle_model/test/: test_phase0_import.py  test_vehicle_model_phase1.py
src/vehicle_model/vehicle_model/: model.py  vehicle_model_node.py
(+284 files in other folders)
