<?xml version="1.0"?>
<package format="3">
  <name>daidalus_node</name>
  <version>0.0.1</version>
  <description>DAIDALUS / synthetic DAA ROS 2 node with gtest.</description>
  <maintainer email="ignacio@example.com">ignacio</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>flightmind_msgs</depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
