<?xml version="1.0"?>
<package format="3">
  <name>fdir</name>
  <version>0.0.1</version>
  <description>FDIR detectors (nav, motor, link, sensor) and emergency zone selection.</description>
  <maintainer email="ignacio@example.com">ignacio</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>ament_index_python</depend>
  <exec_depend>python3-yaml</exec_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
