<?xml version="1.0"?>
<package format="3">
  <name>flightmind_common</name>
  <version>0.0.1</version>
  <description>Shared utilities (structured logging, helpers).</description>
  <maintainer email="ignacio@example.com">ignacio</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>python3-yaml</exec_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
