cmake_minimum_required(VERSION 3.8)
project(flightmind_msgs)

find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/NavigationState.msg"
  "msg/DaidalusAlert.msg"
  "msg/DaidalusBands.msg"
  "msg/ACASAdvisory.msg"
  "msg/VehicleModelState.msg"
  "msg/FSMState.msg"
  "msg/GeofenceStatus.msg"
  "msg/TrafficIntruder.msg"
  "msg/TrafficReport.msg"
  "msg/TrajectorySetpoint.msg"
  DEPENDENCIES std_msgs geometry_msgs
)

ament_export_dependencies(rosidl_default_runtime)
ament_package()
