<?xml version="1.0"?>
<package format="3">
  <name>navigation_bridge</name>
  <version>0.0.1</version>
  <description>Bridge PX4 VehicleOdometry to flightmind_msgs/NavigationState.</description>
  <maintainer email="ignacio@example.com">ignacio</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>flightmind_msgs</depend>
  <depend>px4_msgs</depend>
  <exec_depend>ament_index_python</exec_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
