<?xml version="1.0"?>
<package format="3">
  <name>perception_bridge</name>
  <version>0.0.1</version>
  <description>Sensor adapter (LiDAR, camera, IMU) and SLAM bridge; FAST-LIO2 backend (stub).</description>
  <maintainer email="ignacio@example.com">ignacio</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>ament_index_python</exec_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
