<?xml version="1.0"?>
<package format="3">
  <name>trajectory_gen</name>
  <version>0.0.1</version>
  <description>Dubins 3D trajectory generation for execution (Fase 7).</description>
  <maintainer email="ignacio@example.com">ignacio</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vehicle_model</depend>
  <depend>gpp</depend>
  <depend>flightmind_msgs</depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
