<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>upnext_icarous_daa</name>
  <version>0.1.0</version>
  <description>ICAROUS TrafficMonitor (DAIDALUS) fed by PX4 topics; synthetic intruder for demo.</description>
  <maintainer email="ignacio-querol@todo.todo">ignacio-querol</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>upnext_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
